[package]
name = "AdventOfCode2021"
version = "0.1.0"
authors = ["Stéphane K <steffkarraz@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name="day01"
path="src/bin/day01/day01.rs"

[[bin]]
name="day02"
path="src/bin/day02/day02.rs"

[[bin]]
name="day03"
path="src/bin/day03/day03.rs"

[[bin]]
name="day04"
path="src/bin/day04/day04.rs"
